index.css
body {
	background-color: #000000;
	margin: 0px;
	overflow: hidden;
}

#loading {
	position: absolute;
	top: 50%;
	left: 50%;
	width: 614px;
	height: auto;
	line-height: 50px;
	font-size: 16px;
	font-family: Helvetica, Arial;
	color: #999;
	background: #000;
	margin-left: -305px;
	margin-top: -50px;
	text-align: center;
}

#title {
	display: inline-block;
	background: transparent url(img/title.png);
	width: 613px; height: 73px;
	font-size: 0px; text-indent: -9999px;
}

#credit {
	display: block;
	background: transparent url(img/credit.png);
	width: 399px; height: 32px;
	font-size: 0px; text-indent: -9999px;
	position: fixed; 
	bottom: 20px; left: 50%;
	margin-left: -200px;
}

#progress {
	text-align: right;
	color: #777;
	margin-top: 1em;
}

#progress div {
	display: block;
	width: 100%;
	border: 1px solid #999;
	border-radius: 5px;
	height: 8px;
	text-align: left;
	padding: 0 1px;
}

#progress b {
	background: #fff;
	display: inline-block;
	border-radius: 5px;
	height: 6px; width: 0%;
}

#crosshair {
	position: absolute;
	background: yellow;
	top: 50%; left: 50%;
	height: 30px; width: 1px;
	margin-top: -15px;
}

#controls {
	position: absolute;
	bottom: 10px;
	width: 100%;
	text-align: center;
}

#controls.hide {
	opacity: 0;
}

#controls button {
	font: 2em sans-serif;
	padding: 0.5em 0.8em;
	color: #aaa; 
	border: 1px solid #aaa;
	border-radius: 1.2em;
	background: transparent;
	opacity: 0.8;
	cursor: pointer;
}

#controls button:hover {
	background: rgba(255,255,255,0.2);
}

#dialog-overlay {

	/* set it to fill the whil screen */
	width:100%; 
	height:100%;
	
	/* transparency for different browsers */
	filter:alpha(opacity=50); 
	-moz-opacity:0.5; 
	-khtml-opacity: 0.5; 
	opacity: 0.5; 
	background:#000; 

	/* make sure it appear behind the dialog box but above everything else */
	position:absolute; 
	top:0; left:0; 
	z-index:3000; 

	/* hide it by default */
	display:none;
}


#dialog-box {
	
	/* css3 drop shadow */
	-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
	-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
	
	/* css3 border radius */
	-moz-border-radius: 5px;
    -webkit-border-radius: 5px;
	
	background:#eee;
	/* styling of the dialog box, i have a fixed dimension for this demo */ 
	width:328px; 
	
	/* make sure it has the highest z-index */
	position:absolute; 
	z-index:5000; 

	/* hide it by default */
	display:none;
}

#dialog-box .dialog-content {
	/* style the content */
	text-align:left; 
	padding:10px; 
	margin:13px;
	color:#666; 
	font-family:arial;
	font-size:11px; 
}

button.close {
	/* styles for button */
	margin:10px 10px 0 auto;
	text-align:center;
	display: block;
	padding: 5px 10px 6px;
	color: #fff;
	text-decoration: none;
	font-weight: bold;
	line-height: 1;
	
	/* button color */
	color: #e33100;
	border:none;
	background:transparent;
	
	/* css3 implementation :) */
	/* rounded corner */
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	
	/* drop shadow */
	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
	
	/* text shaow */
	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
	border-bottom: 1px solid rgba(0,0,0,0.25);
	position: relative;
	cursor: pointer;

	float:right;
	
}

button.close:hover {
	background-color: #c33100;	
}

/* extra styling */
#dialog-box .dialog-content p {
	font-weight:700; margin:0;
}

#dialog-box .dialog-content ul {
	margin:10px 0 10px 20px; 
	padding:0; 
	height:50px;
}

/* Website content below pano */

#website {
	background: #fff; color: #999;
	padding: 1em; margin: 1em;
}

